updated admin pages formatting

--- a/app/views/grants/index.html.erb
+++ b/app/views/grants/index.html.erb
@@ -1,9 +1,18 @@
-<h1>Grants List</h1>
+<% content_for :sidebar do %>
+<% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+  <div align="center">
+  <%= button_to 'Add New Grant', new_grant_path, :method => :get %>
+  </div>
+<% end %>
+
+<% end %>
+
+<h1>Grants</h1>
 
 <table width="500" class="table_border">
   <tr>
-    <th>right id</th>
-    <th>role_id</th>
+    <th>right</th>
+    <th>role</th>
     <th></th>
     <th></th>
     <th></th>
@@ -12,8 +21,8 @@
 
 <% @grants.each do |grant| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
-    <td><%= grant.right_id %></td>
-    <td><%= grant.role_id %></td>
+    <td><%= grant.right.resource %> <%= grant.right.operation %></td>
+    <td><%= grant.role.name %></td>
     <td><%= link_to 'Show', grant %></td>
     <td><%= link_to 'Edit', edit_grant_path(grant) %></td>
     <td><%= link_to 'Destroy', grant, :confirm => 'Are you sure?', :method => :delete %></td>
@@ -21,6 +30,3 @@
 <% end %>
 </table>
 
-<br />
-
-<%= link_to 'New Grant', new_grant_path %>
