--- a/app/views/grants/show.html.erb
+++ b/app/views/grants/show.html.erb
@@ -2,9 +2,12 @@
 
 <div class="form_cell">
 <p><em>Right ID:</em> <%= @grant.right_id %><br />
+<em>Resource:</em> <%= @grant.right.resource %><br />
+<em>Operation:</em> <%= @grant.right.operation %></p>
 </div>
 <div class="form_cell">
 <p><em>Role ID:</em> <%= @grant.role_id %><br />
+<em>Role Name:</em> <%= @grant.role.name %></p>
 </div>
 
 </div>
