--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -15,11 +15,13 @@
   <div class="cell">
   <div class="field">
     <%= f.label :right_id %><br />
-    <%= f.text_field :right_id %>
+    <%= f.collection_select :right_id, Right.ordered.ordered_ops.all, :id, :oper_resource, options = {:order => 'resource ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
   </div>
   <div class="field">
     <%= f.label :role_id %><br />
-    <%= f.text_field :role_id %>
+    <%# f.text_field :role_id %>
+    <%= f.collection_select :role_id, Role.all, :id, :name, options = {:order => 'resource ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+
   </div>
   </div>
 
