clean up of products add screen, added image asset for lfhe

--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -9,6 +9,8 @@
 <br />
 <%= button_to "Trips", trips_path, :method => :get %>
 <br />
+<%= button_to "PX Items", products_path, :method => :get %>
+<br />
 </div>
 <% end %>
 
