--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -29,7 +29,7 @@
   <div class="form_cell">
     <div class="field">
       <%= f.label :description %><br />
-      <%= f.text_area :description, :rows => 5, :cols => 65  %>
+      <%= f.text_area :description, :size => "50x5"  %>
     </div>
   </div>
 </div>
