--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,11 @@
+<% content_for :sidebar do %>
+<% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "admin" } %>
+  <div align="center">
+  <%= button_to 'Add New Product', new_product_path, :method => :get %>
+  </div>
+<% end %>
+<% end %>
+
 <% if notice %>
 <p id="notice"><%= notice %></p>
 <% end %>
@@ -29,6 +37,3 @@
 <% end %>
 </table>
 
-<br />
-
-<%= link_to 'Add New Product', new_product_path %>
