added prepay button to ride requests

--- a/app/views/ride_requests/show.html.erb
+++ b/app/views/ride_requests/show.html.erb
@@ -40,3 +40,29 @@ Indicated interest at the following events:<br />
   <% end %>
 </ul>
 <% end %>
+
+<p>Living History Flight Experience PrePay is <strong>$395</strong>, if you would like to prepay for your ride please use this link.</p>
+
+<div style="text-align: center;">
+<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+<br />
+<input type="image" src="https://www.paypal.com//en_US/i/btn/sc-but-03.gif" border="0" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
+<input type="hidden" name="add" value="1">
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="business" value="px_info@devildogsquadron.com">
+<input type="hidden" name="item_name" value="Living History Flight Experience">
+<input type="hidden" name="item_number" value="100">
+<input type="hidden" name="amount" value="395">
+<input type="hidden" name="page_style" value="Primary">
+<input type="hidden" name="shipping" value="0">
+<input type="hidden" name="no_shipping" value="2">
+<input type="hidden" name="no_note" value="1">
+<input type="hidden" name="currency_code" value="USD">
+<input type="hidden" name="lc" value="US">
+<input type="hidden" name="bn" value="PP-ShopCartBF">
+
+</form>
+
+</div>
