adding underlines to links

--- a/app/assets/stylesheets/web_style.css
+++ b/app/assets/stylesheets/web_style.css
@@ -1,16 +1,16 @@
 a:link {
         color: #003399;
-        text-decoration: none;
+        /*text-decoration: none;*/
         }
 
 a:visited {
         color: #1a2b54;
-        text-decoration: none;
+        /*text-decoration: none;*/
         }
 
 a:hover {
         color: #003399;
-        text-decoration: underline;
+        /*text-decoration: underline;*/
         }
 
 
