--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -41,19 +41,17 @@ Georgetown, TX 78628</p>
         <th>Position</th>
         <th>Officer</th>
     </tr>
-   <% @officer_positions.each do |officer_position| %>
-   <tr class="<%= cycle('white_row', 'yellow_row') %>">
-     <td><%= officer_position.position_name %>: </td>
-     <td><% officer_position.members.each do |member| %>
-      <% if last_position == officer_position.position_name %>
-        /
-       <% end %>
-      <%= member.first_name + " " + member.last_name %>
-      <% last_position = officer_position.position_name %>
-    <% end %>
-    </td>
+    <% @terms.each do |term| %>
+    <tr class="<%= cycle('odd_row', 'even_row') %>">
+      <% if last_position != term.officer_position.position_name %>
+        <td><%= term.officer_position.position_name %></td>
+        <td><%= term.member.first_name + ' ' + term.member.last_name %></td>
+      <% end %>
     </tr>
 <% end %>
 </table>
+
+
+ 
             <p>If you have any questions or comments, please send us an email 
               at <a href="mailto:info@devildogsquadron.com">info@devildogsquadron.com</a></p>
