--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -113,7 +113,7 @@
 <div style="clear: both;"></div>
 <hr />
 
-<% if @event.event_type.title == "Air Show" %>
+<% if @event.flight_roster == true  %>
 
 <% if current_user %>
 
