--- a/app/views/sidebars/_lfhe.html.erb
+++ b/app/views/sidebars/_lfhe.html.erb
@@ -2,11 +2,7 @@
 
 <h1>Book a Ride</h1>
 
-Book your seat online and SAVE. Buying online guarantees your reservation. And you can SAVE by reserving online.
- 
-To purchase a seat click on our schedule there you will find our events for this year.
+<p>Book your seat online and SAVE. Buying online guarantees your reservation. And you can SAVE by reserving online.</p>
 
-If rides are available at an event near you you can click on the event enter your reservation
-
-All seats are regular price at the event.
+<p>All seats are regular price at the event.</p>
 </div>
