--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,6 +29,7 @@
     <li><%= link_to "Support", px_path %></a>
         <ul>
         <li><%= link_to "PX", px_path %></li>
+        <li><%= link_to "Rides", living_flight_history_experience_path %></li>
         <li><%= link_to "Squadron", pages_squadron_path %></li>
 <!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
         </ul>
