--- a/app/views/sidebars/_f_18.html.erb
+++ b/app/views/sidebars/_f_18.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Fun Facts</h1>
 
-<p>The B-25, a 'medium-sized bomber', is similar in size to the F-18.</p>
+<p>The B-25, a 'medium-sized bomber', is similar in size to the F-18 'fighter'.</p>
 
 <%= image_tag 'b-25_f-18.png' %>
 
