updates to copy

--- a/app/views/pages/living_flight_history_experience.html.erb
+++ b/app/views/pages/living_flight_history_experience.html.erb
@@ -63,7 +63,9 @@
 <span class="caption_text">'Selfie' in the prop spinner?</span>
 </div>
 
-<p>After the "runup" - checking all the aircraft systems for proper operation - you taxi out to the runway and position for takeoff. And then your definition of loud gets reset as both engines are set to takeoff power and you sink into your seat - this old dog still has some muscle - and you are soon airborne. Cue the grins and maybe some goosebumps.</p>
+<p>After the "runup" - checking all the aircraft systems for proper operation - you taxi out to the runway and position for takeoff. And then your definition of loud gets reset as both engines are set to takeoff power and you sink into your seat - this old dog still has some muscle - and you are soon airborne.</p>
+
+<p>Cue the grins and maybe some goosebumps.</p>
 
 <p>Soon after you are airborne, the crew will signal you can unbuckle your seat belts and are 'free to move about the cabin'. Looking out the front window and to the side at that huge spinning propeller - you can't help but wonder what it was like for our veterans who flew these planes and others like them.</p>
 
@@ -76,7 +78,7 @@
 
 <p>Of course you can't know what it was really like but you'll have a much greater appreciation of the working conditions and sacrifices made by our veterans to defend our country and freedoms.</p>
 
-<p>No matter how long the flight, it'll be over before you are ready so be sure to keep moving and get a look out of each of the windows. Or feel free to stay seated and enjoy the ride.</p>
+<p>No matter how long the flight, it'll be over before you are ready so be sure to keep moving and get a look out of each of the big windows. Or feel free to stay seated and just enjoy the ride.</p>
 
 <div style="float:right; margin: 0 0 0.5em 0.5em;border: 1px solid #999; text-align: center; padding: 0.5em;">
 <%= image_tag "lhfe2.jpg", :width => '250px', :border => '1px solid #000' %><br />
