--- a/app/views/pages/refund_policy.html.erb
+++ b/app/views/pages/refund_policy.html.erb
@@ -18,4 +18,4 @@
   <li>$ 150 fee for cancellation within 48 hours of ride date.</li>
 </ul>
 
-<p>No shows are non-refundable.</p>
+<p>Passenger No-Shows are non-refundable.</p>
