--- a/app/views/pages/_hp_about.html.erb
+++ b/app/views/pages/_hp_about.html.erb
@@ -2,7 +2,7 @@
 
 <h1>About Devil Dog Squadron</h1>
 
-<img src="assets/CAF_logo_161_72.jpg" width="161" height="72" class="fl" /><p>The Devil Dog Squadron is a volunteer organization of the Commemorative Air Force, dedicated to flying, maintaining and preserving a WWII B-25 bomber, the Devil Dog. The Devil Dog represents a PBJ, the Marine Corps version of a B-25.</p>
+<%= image_tag "CAF_Logo_final_4c_PR.jpg", :width => "161px", :class => "fl"%><p>The Devil Dog Squadron is a volunteer organization of the Commemorative Air Force, dedicated to flying, maintaining and preserving a WWII B-25 bomber, the Devil Dog. The Devil Dog represents a PBJ, the Marine Corps version of a B-25.</p>
 
 <p>We encourage you to explore our site to learn more about PBJs, the Squadron and the Commemorative Air Force.</p>
 
