--- a/app/views/event_signups/edit_signup.html.erb
+++ b/app/views/event_signups/edit_signup.html.erb
@@ -1,17 +1,18 @@
 <% content_for :sidebar do %>
 
-<div align="center">
-  <%= button_to 'Remove my Request', @event_signup, :confirm => 'Are you sure?', :method => :delete %>
-<p>If you would like to delete your sign-up click this button.</p>
-</div>
-
-
-
 <% end %>
 
 <h1>Editing Event Signup</h1>
 
-<p>To change your level of commitment select the appropriate button and click the 'Update my Request' button.</p>
+<p>To change your level of commitment for <strong><%= @event_signup.event.title %>, 
+
+<% if @event_signup.event.start.strftime("%b %d" ) == @event_signup.event.end.strftime("%b %d") %>
+    <%= @event_signup.event.start.strftime("%b. %d, %Y") %>,
+<% else %>
+    <%= @event_signup.event.start.strftime("%b. %d") %> - <%= @event_signup.event.end.strftime("%b. %d, %Y") %>, 
+<% end %>
+
+</strong> select the appropriate button and click the 'Update my Request' button.</p>
 
 <%= render 'member_form' %>
 
